# chip_8

./: Cargo.toml  README.md
resources/: font.txt
src/: chip_8.rs  cpu.rs  display.rs  main.rs  memory.rs
