[package]
name = "chip_8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "0.8.4"
ggez = "0.8.0-rc0"
glam = {version = "0.21.3", features = ["mint"]}
mint = "0.5.1"
egui = "0.18.1"
# will need to update this once support for ggez 8.0.0
ggez-egui = "0.2.1"